# Artillery-Simulator-

./: CMakeLists.txt  Lab07.cpp  acceleration.cpp  acceleration.h  angle.cpp  angle.h  constants.h  howitzer.cpp  howitzer.h  projectile.cpp  projectile.h  testAcceleration.h  testVelocity.h  uiDraw.cpp  velocity.cpp  velocity.h
